# graphql-mcp-server

./: .env.development.example  .gitignore  CLAUDE.md  DEV_SETUP.md  IMPROVEMENTS.md  QUICK_START.md  README.md  pyproject.toml  run_server.py  verify_mcp.py
docs/: README.md  phase3-tools-documentation.md
examples/: README.md
misc/: README.md  TEST_SUMMARY.md  download_schema.py  fix_todo_imports.py  run_server.py  run_server_with_auth.py  test_additional_mcp_tools.py  test_additional_tools_detailed.py  test_all_tools.py  test_env.py  test_local_server.py  test_mcp_tools.py  test_mcp_tools_fixed.py  test_phase3_tools.py  test_phase_2_all_tools.py  test_phase_2_simple.py  test_remaining_todo_tools.py  test_todo_tools_direct.py  test_todo_tools_minimal.py  test_tools.py  test_tools_direct.py  test_tools_live.py  test_webhook_configurator.py  test_webhook_interactive.py  test_webhook_real_endpoints.py  test_with_schema.py  verify_setup.py
test_results/: 00_analysis_overview.md  01_search_schema_results.md  02_query_templates_results.md  03_code_examples_detailed.md  03_code_examples_results.md  04_introspect_type_results.md  05_error_decoder_results.md  06_compliance_checker_detailed.md  07_workflow_sequences_detailed.md  FINAL_SUCCESS_SUMMARY.md  FINAL_TEST_SUMMARY.md  PHASE_2_SUMMARY.md
tests/: README.md  __init__.py  conftest.py  test_setup.py
tool_result_examples/: 01_search_schema_detailed.md  02_query_templates_detailed.md  04_introspect_type_detailed.md  05_error_decoder_detailed.md  08_field_relationships_detailed.md  09_input_validation_detailed.md  10_performance_analyzer_detailed.md  11_healthcare_patterns_detailed.md  12_rate_limit_advisor_detailed.md  13_field_usage_detailed.md  14_integration_testing_detailed.md  15_webhook_configurator_detailed.md  (+2 more)
(+127 files in other folders)
